# LUMA

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: bench.py  bench_compile.py  bench_nanogpt.py
src/luma_optimizer/: __init__.py  config.py  functional.py  optimizer.py  triton_kernel.py
tests/: conftest.py  test_basic.py  test_compile.py  test_convergence.py  test_correctness.py  test_determinism.py  test_fsdp.py  test_mixed_precision.py  test_state_dict.py  utils.py
