[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luma-optimizer"
version = "0.1.0"
description = "LUMA: Log-space Unbiased Momentum AdamW — memory-efficient drop-in replacement for AdamW"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Igor Yashchenko"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "torch>=2.2",
]

[project.optional-dependencies]
triton = ["triton>=3.0"]
dev = [
    "pytest>=8.0",
    "setuptools>=68.0",
]

[project.urls]
Repository = "https://github.com/iyashch/luma"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
